fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -190,7 +190,7 @@ footer a {
     }
 
     .hero {
-        top: 480px;
+        top: 400px;
         padding: 16px 24px 24px 24px;
     }
 
